--- a/.github/workflows/check_python_version.yml
+++ b/.github/workflows/check_python_version.yml
@@ -2,8 +2,7 @@ name: check_python_version
 
 on:
   push:
-    branches:
-      - check_python_version
+    branches: [check_python_version]
 
 jobs:
   check_python_version:
